--- a/resources/assets/cms/less/media_library.less
+++ b/resources/assets/cms/less/media_library.less
@@ -55,7 +55,7 @@
 	}
 
 	.tab-pane { 
-		min-height: 240px; 
+		min-height: 160px; 
 	}
 	
 	.file-info-container {
